# pg-mirror

./: .gitignore  CHANGELOG.md  README.md  db-restore.py  pg-mirror  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  tests.yml
docs/: README.md  installation.md
docs/development/: CONTRIBUTING.md  GITHUB_ACTIONS.md  GITHUB_ACTIONS_QUICKSTART.md  PUBLISHING_GUIDE.md  TESTS_COMPLETION_REPORT.md  TEST_IMPLEMENTATION_SUMMARY.md
docs/guides/: QUICKSTART.md  SYSTEM_CHECKS.md
docs/project/: DOCUMENTATION_REORGANIZATION.md  PROJECT_STRUCTURE.md  SUMMARY.md  UPDATE_SUMMARY.md
docs/reference/: README_CLI.md
examples/: README.md  config.example.json  config.localhost.json  config.prod-to-staging.json
pg_mirror/: __init__.py  backup.py  cli.py  config.py  database.py  logger.py  restore.py  system_checks.py
tests/: README.md  conftest.py  test_backup.py  test_config.py  test_database.py  test_logger.py  test_restore.py  test_system_checks.py
